Refactor AI Service Integration and Enhance Exception Handling
- Updated NoteController to use getAiReflection instead of getDeepSeekNotes.
- Enhanced GlobalExceptionHandler with additional exception handling for IllegalStateException,
  RuntimeException, and generic exceptions, including logging.
- Refactored AiService:
  - Added configuration-based initialization for RestTemplate with timeout and UTF-8 support.
  - Improved error handling for AI service calls with detailed logging.
  - Introduced isAiServiceAvailable method for health checks.
- Updated UserService:
  - Replaced getDeepSeekNotes with getAiReflection for AI-based note analysis.
  - Added fallback reflection generation for cases where AI service is unavailable.
- Added AI service configuration properties to application.properties.